# bgg22-voxBG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  get_struct.py  main.py
demos/MATLAB/: demo_build_voxbg_chc.m  demo_build_voxbg_wm.m  demo_grasd.m  demo_visualize_voxbg.asv  demo_visualize_voxbg.m
demos/data/HCP/dataset/100307/T1w/graph/gmlh_res1250_spaceT1w/: G.gmlh.res1250.spaceT1w.mat  gmlh.res1250.T1wSpace.pruning_info.txt
demos/data/HCP/dataset/100307/T1w/graph/gmlh_res2000_spaceT1w/: G.gmlh.res2000.spaceT1w.mat  gmlh.res2000.T1wSpace.pruning_info.txt
src/MATLAB/: voxbg_adjacencymatrix_diffusion.m  voxbg_adjacencymatrix_gmxx.m  voxbg_build.m  voxbg_compute_adjacency.m  voxbg_get_struct.m  voxbg_get_struct_mini.m  voxbg_inspect.m  voxbg_plot_atom.m  voxbg_soliangodf.m
src/MATLAB/utils/: ml_get_volume.m  ml_parse_plane.m  ml_plot_odfs_box.m  plot_graph_slice.m
src/MATLAB/utils/prune/: hb_prune_adjacency.m  hb_prune_graph.m  hm_plot_adjacency_diff.m  ml_plot_adjacency_diff.m
src/MATLAB/utils/prune/utils/: read_gifti_file_hb.m
src/MATLAB/utils/prune/utils/spm12_gifti_extract/: README.txt  read_gifti_file_hb.m
src/MATLAB/utils/utils_matlab_aitchbigithub/: hb_gunzip.m  hb_make_connected.m  hb_nii_load.m  hb_nii_resample.m
src/Python/: ConstructionNode.cpp  ConstructionNode.h  Octree.cpp  Octree.h  utils.py
test/Python/: ConstructionNode_test.cpp  Octree_test.cpp  main_test.cpp  utils.cpp  utils.h
